# retroboard-v2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: ✨-new-feature-request.md  🚀-enhancement.md
.github/workflows/: backend_style_check.yml  commit_message_check.yml  docker_release.yml  frontend_style_check.yml  lint_backend.yml  lint_frontend.yml  lint_frontent.yml  test_backend.yml
backend/: Dockerfile  alembic.ini  app.py  config.py  pyproject.toml  settings.json
backend/app/: __init__.py
backend/app/database/: models.py
backend/app/services/: services.py
backend/custom_types/: api_response.py
backend/database/: database_handler.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_cascade_delete_to_notes.py
backend/routes/: api_routes.py  board_routes.py
backend/services/: services.py
backend/tests/: test_routes.py  test_services.py
docker/: Dockerfile
docs/: database_structure.md
frontend/: .prettierrc.json  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: BoardCard.vue  BoardSettingsModal.vue  EditNoteCategoryModal.vue  ExportModal.vue  FilterToggle.vue  KeyboardHelp.vue  KeyboardKey.vue  MenuBar.vue  NewBoardModal.vue  NewNoteModal.vue  SettingsModal.vue  TextInputComponent.vue  Toggle.vue  YesNoModal.vue
frontend/src/components/input/: ButtonInputComponent.vue  CheckboxInputComponent.vue  PopupListButtonComponent.vue  SelectInputComponent.vue  TextInputComponent.vue
frontend/src/components/modals/: BoardSettingsModal.vue  EditNoteCategoryModal.vue  ExportModal.vue  ImportModal.vue  NewBoardModal.vue  (+3 more)
frontend/src/composables/: fetch.ts
frontend/src/enums/: global.enums.ts
frontend/src/router/: index.ts
frontend/src/types/: app.ts
frontend/src/views/: BoardView.vue  BoardsView.vue  HomeView.vue  NotesView.vue
scripts/: build_frontend.sh  lint_backend.sh  lint_frontend.sh  test_backend.sh
src/app/database/: database_handler.py  models.py
src/app/routes/: board_routes.py
(+6 files in other folders)
