[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retroboard-backend"
version = "1.0.0"
description = "RetroBoard V2 Backend API Server"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RetroBoard Team"}
]
keywords = ["flask", "api", "retroboard", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]

dependencies = [
    "Flask>=3.1.1",
    "flask-restx>=1.3.0",
    "sqlalchemy>=2.0.41",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "coverage>=7.10.1"
]

[project.urls]
Homepage = "https://github.com/gulyasgergely902/retroboard-v2"
Repository = "https://github.com/gulyasgergely902/retroboard-v2.git"
Issues = "https://github.com/gulyasgergely902/retroboard-v2/issues"

[tool.setuptools]
packages = ["database", "routes", "services"]
include-package-data = true

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E203", # whitespace before ':'
]

[tool.ruff.lint.isort]
known-first-party = ["database", "routes", "services"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
